hw-10: first implementation
