# api/swagger.yaml
@@ -240,6 +240,50 @@ paths:
               type: array
               items:
                 type: string
+  /sensors/{sensor_id}/history:
+    get:
+      summary: Отображение истории состояний датчика
+      description: Возвращает events в заданном временном диапазоне по ID датчика
+      operationId: getSensorHistory
+      tags:
+        - sensors
+      produces:
+        - application/json
+      parameters:
+        - name: sensor_id
+          in: path
+          required: true
+          type: "integer"
+          format: "int64"
+        - name: start_date
+          in: query
+          required: true
+          type: "string"
+          format: "date-time"
+        - name: end_date
+          in: query
+          required: true
+          type: "string"
+          format: "date-time"
+      responses:
+        "200":
+          description: Успех
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/SensorHistoryItem"
+        "404":
+          description: Нет датчика с таким идентификатором
+        "406":
+          description: Запрошен неподдерживаемый формат тела ответа
+        "422":
+          description: Идентификатор датчика или временные рамки не валидны
+          schema:
+            $ref: "#/definitions/Error"
+        default:
+          description: Ошибка исполнения
+          schema:
+            $ref: "#/definitions/Error"
   /users:
     post:
       summary: Создание пользователя
@@ -580,3 +624,14 @@ definitions:
     example:
       sensor_serial_number: "1234567890"
       payload: 10
+  SensorHistoryItem:
+    title: SensorHistoryItem
+    description: История состояний датчика
+    type: object
+    properties:
+      timestamp:
+        type: string
+        format: date-time
+      payload:
+        type: integer
+        format: int64
